--- a/.github/workflows/containers.yaml
+++ b/.github/workflows/containers.yaml
@@ -24,9 +24,9 @@ jobs:
           DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
           DOCKER_REPOSITORY: ${{ secrets.DOCKER_USERNAME }}/k8s-dummy:dev
         run: |
-          echo $DOCKER_USERNAME
-          echo $DOCKER_PASSWORD
-          echo $DOCKER_REPOSITORY
+          echo "DOCKER_USERNAME: $DOCKER_USERNAME"
+          echo "DOCKER_PASSWORD: $DOCKER_PASSWORD"
+          echo "DOCKER_REPOSITORY: $DOCKER_REPOSITORY"
           docker buildx build --push --platform linux/amd64,linux/arm64 --tag $DOCKER_REPOSITORY --file Dockerfile.dev .
 
       - name: Build and push Docker image for main branch
