--- a/.github/workflows/containers.yaml
+++ b/.github/workflows/containers.yaml
@@ -1,4 +1,4 @@
-name: Docker Publish
+name: Publish Docker image
 
 on:
   push:
@@ -7,32 +7,43 @@ on:
       - main
 
 jobs:
-  build-and-publish:
+  push_to_registry:
+    name: Push Docker image to Docker Hub
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+      - name: Check out the repo
+        uses: actions/checkout@v3
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
+      - name: Log in to Docker Hub
+        uses: docker/login-action@f4ef78c080cd8ba55a85445d5b36e214a81df20a
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Build and push Docker image for dev branch
-        if: github.ref == 'refs/heads/dev'
-        env:
-          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
-          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-          DOCKER_REPOSITORY: ${{ secrets.DOCKER_USERNAME }}/k8s-dummy:dev
+      - name: Determine branch
+        id: branch
+        run: echo "::set-output name=branch::${GITHUB_REF#refs/heads/}"
+
+      - name: Set Dockerfile path
+        id: dockerfile
         run: |
-          echo ${{ secrets.DOCKER_USERNAME }}
-          echo ${{ secrets.DOCKER_PASSWORD }}
-          docker buildx build --push --platform linux/amd64,linux/arm64 --tag $DOCKER_REPOSITORY --file Dockerfile.dev .
+          if [ "${{ steps.branch.outputs.branch }}" == "dev" ]; then
+            echo "::set-output name=dockerfile::Dockerfile.dev"
+          elif [ "${{ steps.branch.outputs.branch }}" == "main" ]; then
+            echo "::set-output name=dockerfile::Dockerfile.main"
+          fi
 
-      - name: Build and push Docker image for main branch
-        if: github.ref == 'refs/heads/main'
-        env:
-          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
-          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-          DOCKER_REPOSITORY: ${{ secrets.DOCKER_USERNAME }}/k8s-dummy:main
-        run: |
-          docker buildx build --push --platform linux/amd64,linux/arm64 --tag $DOCKER_REPOSITORY --file Dockerfile.main .
+      - name: Extract metadata (tags, labels) for Docker
+        id: meta
+        uses: docker/metadata-action@9ec57ed1fcdbf14dcef7dfbe97b2010124a938b7
+        with:
+          images: ${{ secrets.DOCKER_USERNAME }}/k8s-dummy:${{ steps.branch.outputs.branch }}
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@3b5e8027fcad23fda98b2e3ac259d8d67585f671
+        with:
+          context: .
+          file: ${{ steps.dockerfile.outputs.dockerfile }}
+          push: true
+          tags: ${{ secrets.DOCKER_USERNAME }}/k8s-dummy:${{ steps.branch.outputs.branch }}
+          labels: ${{ steps.meta.outputs.labels }}
